drama aspects back in appendix

--- a/_posts/thesis_chapters/2025-6-6-Gdps_v2.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v2.md
@@ -119,17 +119,17 @@ In the previous chapter, I outlined the evolution of tool use, emphasising emerg
 
 **Set out path of chapter, here at start?**
 
-I describe the use of GDPs as diverse mediational strategies to overcome some of the tensions explored in the previous chapter, not only addressing the use of facilitator-provided resources but also as part of emerging community practices and interpersonal repertoires.
+I describe the use of GDPs as diverse mediational strategies to overcome some of the tensions explored in the previous chapter, addressing  not only their intended use as part of facilitator-provided resources to address known barriers to game making but also their role within of emerging interpersonal and community practices.
 
 A discussion section explores the implications of these findings in relation to existing research and theoretical concepts.
 
-**Redifining terms - and why design patterns?**
+**Redefining terms - and why design patterns?**
 
 Software design patterns are a grouping of a description of target project behaviour, with a suggested community solution of code structure often accompanied with worked examples (see Chapter 2). While existing research explores the use of game design patterns in educational settings, for instance to aid the transfer of science simulation concepts to other contexts [@repenning_scalable_2015; @basawapatna_using_2010] or as a foundation for co-design work [@eriksson_using_2019], there is limited work addressing their role in overcoming challenges faced by emerging communities of game creators using text coding.
 
 While much research on teaching coding addresses the benefits of collaborative approaches (see Chapter 2), fewer studies outline strategies to facilitate joint attention [@brennan_scratch-ed_2009]. Thus, it potentially fruitful to align relevant uses of GDPs to existing research on the development of shared language to support joint work and guided participation [@stahl_computer-supported_2006]. Returning to Kynigos's interpretation of the half-baked game as a boundary object facilitating communication [@kynigos_half-baked_2007], we GDP concept themselves can also been seen a _boundary objects_ at a greater level of granularity. The work of Stahl and others [@stahl_computer-supported_2006] within the fields of technology use and collaborative learning is relevant here to highlight the importance of language development and the intersubjective interpretation of visual prototypes and gestures as tools in building mutual understanding in the kind of _joint problem space_ we see in this study.   
 
-
+MORE DETAIL - DIFFERENT COLUMNS - NAME ON RIGHT.
 
 | **GDP usage in game making**               | **Description (using CHAT concepts)**                                 |
 | ------------------------------------------ | --------------------------------------------------------------------- |
@@ -165,68 +165,13 @@ _extending the use of GDPs beyond the initial use to diverse mediational uses an
 
 <!-- While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through the use of game design patterns via varied means.  -->
 
-<!-- -  design patterns in learning dFor this analysisesign which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS) -->
+<!-- -  design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS) -->
   <!-- - how design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006]. -->
+
 <!-- While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope.  -For a study of this nature, too broad an analysis risks insufficient detail to allow replication, too narrow risks being overly context dependant and limiting the potential for wider application. -->
 
+<!-- ### Descriptive Commentary on Vignette 2  IT WAS EXTENSIVE - REMOVED FROM V2-->
 
-
-<!--
-// On line version is here
-https://docs.google.com/document/d/1B7kFl5QsGV-oWtFWHLBIJNpa5GeYMlCntq31BnPAQT4/edit
--->
-
-<!--
-#### Summary Commentary on Annotation and Content of Vignette
-
-This was particularly valuable in the Key Door Person interchange where meaning was not clear before looking at video.
-In previous chapter on methodology we (will) have examined the coding scheme used to code specifics on interactions and participant behaviour and output.
-
-The resulting coding structure is available online here.
-https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/edit# -->
-
-
-
-<!-- ### Short Descriptive Commentary on Vignette 2 -->
-
-<!-- SIGNPOSTING TO DOL & OTHER ASPECTS OF GDP Use -->
-<!-- **Skilful parental work to sustain engagement** -->
-<!-- **Challenge and initiative** -->
-<!-- **Lingua franca** -->
-
-<!-- For the preceding ten minutes, the parent and child dyad had been struggling with a tutorial chapter in the online course manual textbook, included as Appendix.tech.samplechapter, which explains how to add the pattern of keys and doors. In this pattern, players must collect a key and then navigate to a door to progress to the next level. The parent, Susanna, had been making multiple changes to the code while the child, Tehillah, expressed boredom. Susanna then suggested that Tehillah ask the facilitator, Mick, for help in resolving the coding issue. Once the bug was resolved, Susanna handed the keyboard to Tehillah to test the now working game. The implementation of a new game design pattern (GDP) involves adding new code to the game. The amount of code and changes required varies depending on its complexity. Larger changes typically require more careful manipulation of code and subsequent debugging. The key and door pattern is relatively technically challenging to implement. Tehillah is one of the younger participants, and the parent, Susanna, has taken on the role of solving harder coding problems and, in doing so, has built important proficiency in coding practice.
-
-The parent takes action to involve her child in the design process when technically possible and to incorporate her child's interests. Susanna overcomes her own hesitancy about asking for facilitator help by encouraging her child to seek assistancehttps://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit?tab=t.0. When the coding problem is resolved, Susanna signals to Tehillah that it is her turn to return to the design process. This indicates that Susanna recognises the greater potential for effective input from her child at these moments. After the blockage caused by debugging is removed, Susanna immediately re-engages Tehillah, prompting her to play-test the game. Susanna skilfully navigates the process, eliciting and incorporating her child's interests in a variety of ways.
-
-The child also shows initiative, particularly in relation to level design. There is an awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system, which drives their work on the design and coding mechanics of the game. An understanding of the game as a dynamic system becomes especially evident in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level. The pair use the names of the game design patterns they are working on (Adding Levels and Keys and Doors) (Key 44 in Vignette 2). Evidence suggests that Tehillah (child) is building a connection to the game-making pattern. In Key 12 in Vignette 2, abbreviations of the GDP names, Key and Door and Levels, are repeated in a sing-song voice. Additionally, my https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit?tab=t.0description of the Key and Door pattern as a challenging pattern during the session's starting orientation, outlined in Vignette 11, provokes a strong reaction. The use of GDP terms as a lingua franca, a concept that underpins the broader utility of design patterns [@erickson_lingua_2000], to facilitate designing for others is explored in the next section. More broadly, the use of GDP concepts as an evolving design language for providing feedback, sharing knowledge, making requests and other purposes during community activities, pair interactions and individual work is explored in the following sections. -->
-
-<!-- **Transition**
-
-The interactions outlined in this vignette extract show some of the uses of GDPs as mediating strategies and repertoires of interaction that have emerged. These include x and y - which are explore in the next sections, particularly those a
-ddressing cultural practices and interpersonal /  guided participation. -->
-
-<!--cd
-The supporting resources are available here.
-https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#game-mechanic-keys-and-doors -->
-
-<!-- PERHAPS A SCREENSHOT OF THE TEXT BOOK - PERHAPS NAVIGATING THE DROP DOWN MENU OF PATTERNS.  -->
-
-<!-- This pair structured the process of implementing new GDPs through careful use of documentation, alternate use of keyboard, adult facilitating and coding process responsive to the child's lead, other individuals and pairs approached the same objectives in diverse ways.  -->
-
-<!-- DIVISION ON LABOUR HERE - POSSIBLE DUPLICATE? -->
-
-<!-- **Cultural:**  -->
-<!-- This chapter now expands to represent this diversity of the coding and community practices of participants, focusing on their use of game design patterns. -->
-
-<!--
-
-For this child developed a cyclical pattern of alternation between higher and lower engagement with the coding processes based on lower engagement the period of time when her parent was problem solving code and higher engagement once it was implemention of the structural element was almost complete. Completion of the code implementation of a GDP allows for new possibilities in design dynamics using the same text matrix level design tool. This stage of working on a new GDP sustains the child's activity. The child shows high engagement at this stage outlining her plan for implementing the pattern in the process of designing their game. sPECIFICALLY SAYING X, Y Z. -->
-
-
-<!-- As the child progress from making changes to then testing them her engagement stays high. In this example, the process of playtesting also involves the child speaking and identification of modifications to and new GDPs to implement.
-PULL OUT AN EXAMPLE -->
-
-<!-- ADD IN APPENDIX OF MAPS - AND GDPS FOR NAVIGATIONS AND REFRAME IN THIS CHAPTER. -->
 
 
 ### On GDP framing moved from Ch. 5
@@ -236,11 +181,9 @@ A 3GAT (BACK UP CLARIFY) interpretation reveals the object of activity as a comp
 THIS COULD BE IN CH.4 - ?WHERE FOR THIS - STILL NOT SURE
 As the design progressed, it became useful to analyse smaller units of activity. Following Barab and colleagues [@barab_using_2002], who justify the analysis of nested systems in technology-rich environments, I treat the implementation of GDPs as activity systems in their own right. At this level, the subject might be an individual or a parent-child pair working to modify a specific feature within their game. One advantage of this scale is the ability to closely examine the mediating role of tools and the shifts in object of activity that arise from contradiction. By analysing these game design pattern implementations as distinct activity systems, it is possible to trace how the changes made at the individual level feed back into the broader community practices, influencing both the technical and social aspects of the learning environment.
 
-I HAVE DROPED THE IMAGE - I DESCRIBED IN MUCH MORE DETAILS IN THE CHAPTER - I SHOULD STATE HOW I DO THIS AS SIGNPOSTING -
+IMAGE BACK NOW - REVALAUATE USE INEGRATION. AND SIZE OF WRITING AND USE OF OUTCOME
 
-<!-- DROP THIS IMAGE - IT IS DESCRIBED IN MUCH MORE DETAILS IN THE CHAPTER.
-
-![Figure 5.feature - Mid-level activity system of game making: constructing a game feature by feature](./Pictures/At_dia_2_v3.png){width=95%} -->
+![Figure 5.feature - Mid-level activity system of game making: constructing a game feature by feature](./Pictures/At_dia_2_v3.png){width=95%}
 
 The significance of activity at this scope underpins my proposal of GDPs as a germ cell concept within the theoretical framework of the thesis. At this level, the object of activity is more concrete. Participants are focused on implementing or adapting a design pattern in their own game. This allows for analytical clarity and supports the argument that GDPs served not only as pedagogical scaffolds but also as conceptual anchors for the intervention's iterative development.
 
@@ -866,9 +809,23 @@ LINK TO EXPLORATION OF COMPLEX OBJECT BELOW?
 
 <!-- [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic],  -->
 
-3GAT guides researchers to describe expansions of the object of activity. Part of the expansion  of the complex object of activity []@cormier2008rhizomatic], encompasses the underlying motivation of the activity. Chapter 5 began to address the motivations of myself and participants in the changing design. Existing research shows a diversity of conceptualisations of what experience or attribute is being developed in participant in CGD&P or similar digital making.
+3GAT guides researchers to describe expansions of the object of activity.
+
+To recap the complex nature of the component part of object according to activity theory, includes the physical or digital objects being worked, and the object concept incorporating the motivations of the participants and the overall activity [@blunden_activity_2023].
+
+Part of the expansion  of the complex object of activity [@cormier2008rhizomatic], encompasses the unfixed nature of the motivations of those taking part. Chapter 5 addressed the expression evolution of  motivations of myself and participants via a narrative focused on the changing learning design.
+
+In the latter stages of the design process, my motivation shifted to
+
+Existing research shows a diversity of conceptualisations of what experience or attribute is being developed in participant in CGD&P or similar digital making.
 
 Turning to existing literature for explorations of motivations driving CGD&P and similar areas, a strand grouped around different forms of technical fluency [@papert_technological_1995] was explored in Chapter 2 with common features of domain proficiency, self-expression and identity formation and an experience of flow.
+
+
+
+PERHAPS BUT HOW SO?
+In terms of conceptualising the complex object of activity as a whole, the work of Blunden on activity as a project is helpful to this process,  [@blunden_collaborative_2014].
+
 
 One of the motivational factors guiding the evolution of the learning design of this study was to keep participants engaged and thus remaining or in a state of flow [@perttula_flow_2017]. The guiding principle being technical proficiency with the relevant technology to share interests and identity within a community of peers. It is of value to now identifying manifestations of such fluency and identify the techniques used to design for this behaviour via in the mediational uses of GDPs outlined in this chapter. In other words, what can be observed about the interaction of participants use of GDPs and the experience of participant fluency?
 
@@ -1342,15 +1299,7 @@ In addition, I observed that navigating these essential but non-creative tasks i
 In summary, it is of value to create spaces to leverage the potential of these in-between moments for participants.
 ALSO TRUE OF PLAYTESTING
 
-The potential impact on agency is as follows; If these tasks can be seen as more than mere barriers to production, and therefore to be designed out to increase instrumental agency, then there is potential to increase relational agency through flexible divisions of labour that allow the incorp### Implications for practitioners - MOVE LATER?
-<!--
-RETURNING TO WHAT IS FOUND IN THE DATA - A CELEBRATION OF THE CONCRETE - AND UTITILY OF THE MID - LEVEL APPROACH -->
-
-Returning to issues of inclusive approaches to pedagogy, the findings of this chapter resonates with Papert and Turkle's celebration of the process of concrete tinkering. They also suggest that it is potentially augmented, in terms of wider accessibility, with the use of design patterns as a germ cell concept. This approach is flexible and potentially responsive whilst still retaining a unifying pedagogical approach.
-
-In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in goals between activity systems and navigation between one sub-goal and the next. Any other analysis on the part of the participant can wait until the process becomes more familiar.
-
-This approach is aligned to inductive research processes. Finding useful abstractions only after immersing ones-self in the detail. Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation.oration of home roles in to this new learning space. Thus a potential affordance to find identify and specialism here.
+The potential impact on agency is as follows; If these tasks can be seen as more than mere barriers to production, and therefore to be designed out to increase instrumental agency, then there is potential to increase relational agency through flexible divisions of labour that allow the incorporation of home roles in to this new learning space. Thus a potential affordance to find identify and specialism here.
 
 
 ### Implications for practitioners - MOVE LATER?
