--- a/_posts/thesis_chapters/2025-6-5-Design_v15.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v15.md
@@ -468,7 +468,19 @@ While this section presents only a partial account of the missions and the drama
 
 Their inclusion in the design was an significant response to the contradictions described above.
 
-In addition, it is also of value to briefly explore what is missing from the learning design as a way of beginning analysis of what barriers have thus been circumvented though omission.  For example, I developed a visual process of learners mapping their progression from one GDP to another via a large scale visual map [37b]. Similarly, after P3 I created a map of learning dimension based broadly on the work of Brennan and Resnick [^37], of concepts that suit exploration via these game making activities. However, given the sensitivity to alienation from programming culture shown in this section, and the fruitful nature of the peer playtesting activities. I did not prioritise the introduction of these concepts, or activities to teach or activities to reflect on how they were used retrospectively, adaptations that would suit migration to a computing classroom.   
+**what's not included here**
+
+While this chapter has attempted to incorporate a high level of detail of the learning design, for reasons of space, it is not complete. I now briefly list  what is missing from the learning design to indicate certain barriers avoided though omission, and to signpost aspects outside of the closer focus of the overall thesis
+
+I developed a visual process of learners mapping their progression from one GDP to another via a large scale visual map [37b].
+
+In P2 I began a map of learning dimension based broadly on the work of Brennan and Resnick [^37], of concepts that suit exploration via these game making activities.  
+This was developed in D3 in relation to MakeCode resources to include more extensive description and more explicit alignment with curricular requirements [footnote? w/link].
+
+Reflection activities carried out in role following Heathcote's Mantle of the Expert approach.
+THE TRANSCRIPT OF THE REFLECTION SESSION SEEMS TO ME MISSING FROM APPENDIX TOO. ADD BACK IN? IT'S A TABLE - COMPLEX TO ADD?
+
+However, given the sensitivity to alienation from programming culture shown in this section, and the fruitful nature of the peer playtesting activities. I did not prioritise the introduction of these concepts, or activities to teach or activities to reflect on how they were used retrospectively, adaptations that would suit migration to a computing classroom.   
 
 INTEGRATE ABOVE
 This study differs from much of the research in the domain of CGD&P in that cultural and social aspects of the learning design are prioritise over the personal appropriation of computing concepts and practices.
@@ -481,8 +493,6 @@ Chapter 7 focuses on analysing participant reactions to the design from a more c
 ## Chapter Discussion
 
 <!-- MERGED FROM 2024 -11 -6 VERSION -  -->
-
-
 
 This discussion explores features of the design narrative and elements of the design process contribute to the research landscape, specifically: a stage-based approach, as adapted instance of  design-build-test pedagogy is offered as a practical contribution; the learning design is contrasted to UMC and constructionist design principles, highlighting the increased complexity created by trying to use authentic tools and processes; subsequently a harbour metaphor is offered to clarify these conceptual contribution; finally, a summative table section synthesises aspects of systemic contradictions
 
@@ -578,7 +588,6 @@ Harbour walls prevent large waves from entering but also provide gaps allowing m
 
 This chapter has explored the complexity of the interacting tools and documentation in relation to their evolution in different phases of the formative intervention process.
 
-
 Regarding methodology,  the the process of describing the design via design narrative, this process been so extensive we could refer to it as a design voyage.
 
 The emergent and mutual nature of this design process aligns with both DBR principles and CHAT concepts of transformational agency by double stimulation (TADS). Specifically, transformation in tool use based on explicit and implicit feedback.
@@ -592,6 +601,8 @@ The design narrative above has acknowledges my active input into the direction o
 
 This chapter has described three contradictions that occurred during an iterative, phase-based approach using a methodology guided by techniques of DBR and CHAT.
 The contradictions explored initially focused on technical and then more social dimensions of the learning design.
+
+LINK FROM HERE TO START OF CH.6 GERM CELL / SCOPE
 
 **Results**
 Turing to a sumary of the results of the process,
