up ot code patching

--- a/_posts/thesis_chapters/2025-6-5-Design_v15.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v15.md
@@ -474,8 +474,7 @@ While this chapter has attempted to incorporate a high level of detail of the le
 
 I developed a visual process of learners mapping their progression from one GDP to another via a large scale visual map [37b].
 
-In P2 I began a map of learning dimension based broadly on the work of Brennan and Resnick [^37], of concepts that suit exploration via these game making activities.  
-This was developed in D3 in relation to MakeCode resources to include more extensive description and more explicit alignment with curricular requirements [footnote? w/link].
+In P2 I began a map of learning dimension based broadly on the work of Brennan and Resnick [^37], of concepts that suit exploration via these game making activities. This was developed in D3 in relation to MakeCode resources to include more extensive description and more explicit alignment with curricular requirements [footnote? w/link].
 
 Reflection activities carried out in role following Heathcote's Mantle of the Expert approach.
 THE TRANSCRIPT OF THE REFLECTION SESSION SEEMS TO ME MISSING FROM APPENDIX TOO. ADD BACK IN? IT'S A TABLE - COMPLEX TO ADD?
